--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "kirodues",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.12.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -23,7 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "PORT=3030 react-scripts start",
+    "build": "NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
