--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-contentful": "^2.0.6",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
