--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "engines": {
     "node": "10.15.0",
-    "npm": "6.12.0"
+    "npm": "6.12.0",
+    "yarn": "1.16.0"
+
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
