--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "node": "10.15.0",
     "npm": "6.12.0",
     "yarn": "1.16.0"
-
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -25,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
     "react-icons": "^3.9.0",
+    "react-parallax": "^3.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
@@ -33,7 +33,8 @@
     "dev": "PORT=3030 react-scripts start",
     "build": "NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
