--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "kirodues",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "10.20.0",
-    "npm": "6.12.0",
-    "yarn": "1.17.0"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "contentful": "^7.14.2",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
