--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0",
     "react-contentful": "^2.0.6",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-i18next": "^11.3.4",
     "react-icons": "^3.9.0",
     "react-parallax": "^3.0.3",
