--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^11.3.4",
     "react-icons": "^3.9.0",
     "react-parallax": "^3.0.3",
+    "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
