--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
     "start": "react-scripts start",
     "dev": "PORT=3030 react-scripts start",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.12.0"
   },
   "browserslist": {
     "production": [
