--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react-parallax": "^3.0.3",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serve": "^11.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "dev": "PORT=3030 react-scripts start",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build",
