--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "serve": "^11.3.0"
+    "serve": "^11.3.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "serve -s build",
